<resources>

    <string name="app_name">Peoplemon</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="checked_in">Checked in successfully</string>
    <string name="choose_new_picture">Choose new Picture</string>
    <string name="connection_failed">Connection Failed</string>
    <string name="caught_a_new_peoplemon">Caught a new PeopleMon</string>
    <string name="checking_for_nearby_peoplemon">Checking for nearby PeopleMon</string>
    <string name="e_mail_address">Email Address</string>
    <string name="empty_username_or_password">Please complete all fields</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="error_retrieving_image">Error Retrieving Image</string>
    <string name="Error_retrieving_image">Error Retrieving Image</string>
    <string name="failed_to_receive_user_info">Failed to retrieve user info</string>
    <string name="failed_to_find_users">Failed to Find Users</string>
    <string name="failed_check_in">Failed to check in</string>
    <string name="fullName">Name</string>
    <string name="googlemapskey">AIzaSyC3lbjVboIXttDNYtfVTumMBmSlpXRbLKI</string>
    <string name="logout">logout</string>
    <string name="location_services_failed">Location services failed</string>
    <string name="login">Login</string>
    <string name="login_failed">Login Failed</string>
    <string name="list_failed">Error retrieving Peoplemon list</string>
    <string name="no_peoplemon_near_you">No peoplemon near you</string>
    <string name="Peoplemon_are_near">PeopleMon are near</string>
    <string name="profile_info_error">Error Retrieving User Info</string>
    <string name="password">Password</string>
    <string name="password_mismatch">Your passwords do not match</string>
    <string name="register">Register</string>
    <string name="registration_failed">Registration Failed</string>
    <string name="save">Save</string>
    <string name="title_activity_maps">Map</string>
    <string name="there_is_no_peoplemon_near_you">There is no PeopleMon near you</string>
    <string name="unable_to_catch_user">Unable to catch user</string>
    <string name="user">user</string>
    <string name="unable_to_catch_yourself">Unable to catch yourself</string>
    <string name="username">UserName</string>
    <string name="unsuccess_info_retrieve">Unsuccessful User Info Retrieval</string>
    <string name="valid_email">Please enter a valid email</string>

</resources>
